photo on server

--- a/src/main/resources/errorMessages.properties
+++ b/src/main/resources/errorMessages.properties
@@ -1,3 +1,6 @@
 errorMsg.passwordConfirm = Passwords does not match
 errorMsg.emailExists = Email address already exist
 errorMsg.usernameExists = Username already exist
+
+errorMsg.post.title = "Title Missing"
+errorMsg.post.description = "Description needs to be filled"
