--- a/src/main/resources/errorMessages.properties
+++ b/src/main/resources/errorMessages.properties
@@ -4,3 +4,8 @@ errorMsg.usernameExists = Username already exist
 
 errorMsg.post.title = "Title Missing"
 errorMsg.post.description = "Description needs to be filled"
+
+errorMsg.ads.advertisementUrl = "Advertisement URL missing"
+errorMsg.ads.targetAgeMin = "Age min missing"
+errorMsg.ads.targetAgeMax = "Age max missing"
+errorMsg.ads.gender = "Gender missing"
